--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT =5000
 AUTH_MAIL =hadimujeeb300@gmail.com
 MONGO_URL ="mongodb://localhost:27017/Project"
 email =hadimujeeb705@gmail.com
+SESSION_SECRET=zayn
