--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "path": "^0.12.7",
+    "puppeteer-core": "^22.4.1",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
     "sharp": "^0.33.2"
